--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,4 +124,6 @@ dependencies {
     implementation 'com.github.addappcn:android-pickers:1.0.3'
     implementation 'com.yanzhenjie:recyclerview-swipe:1.0.4'
     implementation files('libs/json-jena-1.0.jar')
+    implementation 'com.github.rhlff:NestedScrollWebView:v1.0.2'
+    implementation files('libs/tbs_sdk_thirdapp_v4.3.0.jar')
 }
