--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,4 +126,11 @@ dependencies {
     implementation files('libs/json-jena-1.0.jar')
     implementation 'com.github.rhlff:NestedScrollWebView:v1.0.2'
     implementation files('libs/tbs_sdk_thirdapp_v4.3.0.jar')
+
+    //    上传图片
+//    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.4'{
+//        exclude group: 'com.github.bumptech.glide',module 'glide'
+//    }
+//    compile "io.reactivex.rxjava2:rxjava:2.1.3"
+//    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
 }
