--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.novoda.build-properties'
 
 
+
 buildProperties {
     getPublic {
         file rootProject.file('public.properties')
@@ -32,6 +33,11 @@ android {
         buildConfigField "String", "DEBUG_BUGLY_ID", (buildProperties.getLocal['debug_bugly_appid'] | buildProperties.getPublic['debug_bugly_appid']).string
 
     }
+
+    packagingOptions{
+        pickFirst 'META-INF/*'
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -58,11 +64,15 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
-    implementation "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
+    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+
+//    implementation "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
     implementation "com.android.support:support-v4:${ANDROID_SUPPORT_VERSION}"
-    implementation "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
+
+    //依赖冲突  j就是这个
     implementation "com.android.support.constraint:constraint-layout:${CONSTRAINT_VERSION}"
+    //implementation "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
+
     implementation "com.android.support:preference-v7:${ANDROID_SUPPORT_VERSION}"
     implementation "com.android.support:preference-v14:${ANDROID_SUPPORT_VERSION}"
     testImplementation 'junit:junit:4.12'
@@ -73,8 +83,8 @@ dependencies {
     implementation "com.google.dagger:dagger:${DAGGER_VERSION}"
     annotationProcessor "com.google.dagger:dagger-compiler:${DAGGER_VERSION}"
     implementation "com.tbruyelle.rxpermissions:rxpermissions:${RX_PERMISSION_VERSION}"
-    implementation "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
-    annotationProcessor "com.github.bumptech.glide:compiler:${GLIDE_VERSION}"
+//    implementation "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
+//    annotationProcessor "com.github.bumptech.glide:compiler:${GLIDE_VERSION}"
     implementation "com.jakewharton:butterknife:${BUTTERKNIFE_VERSION}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${BUTTERKNIFE_VERSION}"
     implementation "com.github.GrenderG:Toasty:${TOASTY_VERSION}"
@@ -127,10 +137,15 @@ dependencies {
     implementation 'com.github.rhlff:NestedScrollWebView:v1.0.2'
     implementation files('libs/tbs_sdk_thirdapp_v4.3.0.jar')
 
+//    implementation project(path: ':ucrop')
+    implementation project(':picture_library')
+//    implementation project(path: ':picture_library)
+
     //    上传图片
 //    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.4'{
 //        exclude group: 'com.github.bumptech.glide',module 'glide'
 //    }
-//    compile "io.reactivex.rxjava2:rxjava:2.1.3"
-//    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+//    implementation "io.reactivex.rxjava2:rxjava:2.1.3"
+//    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    //implementation 'com.android.support:multidex:1.0.0'
 }
