--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.novoda.build-properties'
 
 
-
 buildProperties {
     getPublic {
         file rootProject.file('public.properties')
@@ -155,4 +154,10 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.1.3"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
     implementation 'com.android.support:multidex:1.0.0'
+
+
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation 'me.relex:circleindicator:1.2.2@aar'// 沉浸式状态栏
+//    implementation 'com.github.Beseting:PhotoBrowse:v{ LAST-VERSION }'
+
 }
