--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:label="大庆井下作业管理"
         android:roundIcon="@mipmap/newicon"
         android:supportsRtl="true"
-        tools:replace="android:theme"
+        tools:replace="android:theme,label"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/SplashTheme">
 
@@ -77,6 +77,7 @@
         <activity android:name="com.hong.ui.activity.AddTxtActivity" android:label="添加施工参数表"/>
         <activity android:name="com.hong.ui.activity.AddSgcsActivity" android:label="施工参数详细字段查询表"/>
         <activity android:name=".ui.activity.PicSelectActivity" android:label="打开相机"/>
+        <activity android:name=".util.photoBrowser.activity.ImageBrowseActivity" android:label="打开相机"/>
     </application>
 
 </manifest>
