--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,11 +151,13 @@ dependencies {
 //    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.4'{
 //        exclude group: 'com.github.bumptech.glide',module 'glide'
 //    }
+    //照片拍照
     implementation "io.reactivex.rxjava2:rxjava:2.1.3"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
     implementation 'com.android.support:multidex:1.0.0'
 
 
+    //照片预览
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
     implementation 'me.relex:circleindicator:1.2.2@aar'// 沉浸式状态栏
 //    implementation 'com.github.Beseting:PhotoBrowse:v{ LAST-VERSION }'
