--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
         android:usesCleartextTraffic="true"
@@ -35,6 +35,17 @@
         tools:replace="android:theme,label"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/SplashTheme">
+
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
 
         <activity
             android:name="com.hong.ui.activity.SplashActivity"
@@ -80,6 +91,11 @@
         <activity android:name="com.hong.ui.activity.AddSgcsActivity" android:label="施工参数详细字段查询表"/>
         <activity android:name=".ui.activity.PicSelectActivity" android:label="打开相机"/>
         <activity android:name=".util.photoBrowser.activity.ImageBrowseActivity" android:label="打开相机"/>
+
+
+        <!--<activity
+            android:name="com.tencent.bugly.beta.ui.BetaActivity"
+            android:theme="@android:style/Theme.Translucent" />-->
     </application>
 
 </manifest>
