修改网络请求后线程主动回到主线程,添加照片回显!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,7 +125,7 @@ dependencies {
 
     //RxJava
     //implementation "io.reactivex:rxjava:${RXJAVA_VERSION}"
-    //implementation "io.reactivex:rxandroid:${RXJAVA_VERSION}"
+    implementation "io.reactivex:rxandroid:${RXJAVA_VERSION}"
 
     //Type-safe HTTP client for Android and Java by Square, Inc.
     implementation "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
