--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,12 @@ buildProperties {
 
 
 android {
+        lintOptions {
+            checkReleaseBuilds false
+            // Or, if you prefer, you can continue to check for errors in release builds,
+            // but continue the build even when errors are found:
+            abortOnError false
+        }
     compileSdkVersion 28
     buildToolsVersion BUILD_TOOLS_VERSION
     defaultConfig {
