--- a/app/build.gradle
+++ b/app/build.gradle
@@ -196,4 +196,6 @@ dependencies {
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
 
     //其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.2.0
+
+    implementation 'com.nispok:snackbar:2.11.+'
 }
